 - [core] properly honor the "include in freebusy" setting (#3354)
 - [core] make sure to use crypt scheme when encoding md5/sha256/sha512 (#4137)
 - [core] newly subscribed calendars are excluded from freebusy (#3354)
 - [core] strip cr during LDIF import process (#4172)
 - [web] fixed mail delegation of pristine user accounts (#4160)
 - [eas] fixed opacity in EAS freebusy (#4033)
 - [eas] set reply/forwarded flags when ReplaceMime is set (#4133)
 - [eas] remove alarms over EAS if we don't want them (#4059)
 - [eas] correctly set RSVP on event invitations
 - [eas] avoid sending IMIP request/update messages for all EAS clients (#4022)

2.3.20 (2017-03-10)
-------------------

New features
 - [core] new sogo-tool checkup command to make sure user's data is sane 
 - [core] new sogo-tool manage-acl command to manage calendar/address book ACLs
 - [web] use "date" extension of Sieve to enable/disable vacation auto-reply (#1530, #1949)

Enhancements
 - [web] added Hebrew (he) translation - thanks to Raz Aidlitz
 - [web] updated CKEditor to version 4.6.2

Bug fixes
 - [core] remove all alarms before sending IMIP replies (#3925)
 - [core] fixed handling of exdates and proper intersection for fbinfo (#4051)
 - [core] remove attendees that have the same identity as the organizer (#3905)
 - [eas] improved EAS parameters parsing (#4003)
 - [eas] properly handle canceled appointments
 - [web] fixed SCAYT automatic language selection in HTML editor
 - [web] prevent 304 HTTP status code for Ajax requests on IE (#4066)

2.3.19 (2017-01-09)
-------------------

Enhancements
 - [core] added handling of BYSETPOS for BYDAY in recurrence rules
 - [core] improved IMIP handling from Exchange/Outlook clients
 - [web] update jQuery to version 1.12.4 and jQuery UI to version 1.11.4
 - [web] added SOGoMaximumMessageSizeLimit to limit webmail message size
 - [web] added photo support for LDIF import (#1084)
 - [web] updated CKEditor to version 4.6.1

Bug fixes