@@ -16,6 +16,7 @@ Bug fixes
  - [core] newly subscribed calendars are excluded from freebusy (#3354)
  - [core] strip cr during LDIF import process (#4172)
  - [web] fixed mail delegation of pristine user accounts (#4160)
+ - [web] respect SOGoLanguage and SOGoSupportedLanguages (#4169)
  - [eas] fixed opacity in EAS freebusy (#4033)
  - [eas] set reply/forwarded flags when ReplaceMime is set (#4133)
  - [eas] remove alarms over EAS if we don't want them (#4059)
